<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
	<PreferenceCategory android:title="@string/pref_config_title">	
		<net.everythingandroid.smspopup.preferences.AppEnabledCheckBoxPreference
			android:key="@string/pref_enabled_key"
			android:title="@string/pref_enabled_title"
			android:summaryOn="@string/pref_enabled_summaryon"
			android:summaryOff="@string/pref_enabled_summaryoff"
			android:defaultValue="true" />
		<PreferenceScreen
		   android:title="@string/pref_additional_title"
		   android:key="pref_additional_key"
			android:summary="@string/pref_additional_summary"
			android:dependency="@string/pref_enabled_key">
			<PreferenceCategory android:title="@string/pref_additional_summary">
		      <ListPreference
		         android:key="@string/pref_timeout_key"
		         android:title="@string/pref_timeout_title"
		         android:summary="@string/pref_timeout_summary"
		         android:entries="@array/pref_timeout_entries"
		         android:entryValues="@array/pref_timeout_values"
		         android:defaultValue="@string/pref_timeout_default" />
		      <CheckBoxPreference 
		         android:key="@string/pref_privacy_key"
		         android:title="@string/pref_privacy_title"
		         android:summaryOn="@string/pref_privacy_summaryon"
		         android:summaryOff="@string/pref_privacy_summaryoff"
		         android:defaultValue="@string/pref_privacy_default" />
		      <CheckBoxPreference 
		         android:key="@string/pref_markread_key"
		         android:title="@string/pref_markread_title"
		         android:summaryOn="@string/pref_markread_summaryon"
		         android:summaryOff="@string/pref_markread_summaryoff"
		         android:defaultValue="@string/pref_markread_default" />
		      <CheckBoxPreference
		         android:key="@string/pref_onlyShowOnKeyguard_key"
		         android:title="@string/pref_onlyShowOnKeyguard_title"
		         android:summaryOn="@string/pref_onlyShowOnKeyguard_summaryon"
		         android:summaryOff="@string/pref_onlyShowOnKeyguard_summaryoff"
		         android:defaultValue="@string/pref_onlyShowOnKeyguard_default" />
				<CheckBoxPreference
				   android:key="@string/pref_blur_key"
					android:title="@string/pref_blur_title"
					android:summaryOn="@string/pref_blur_summaryon"
					android:summaryOff="@string/pref_blur_summaryoff"
					android:defaultValue="@string/pref_blur_default" />
			</PreferenceCategory>
		</PreferenceScreen>
		<PreferenceScreen
		   android:key="pref_notif_key"
		   android:title="@string/pref_notif_title"
			android:summary="@string/pref_notif_summary"
			android:dependency="@string/pref_enabled_key">
			<PreferenceCategory android:title="@string/pref_notif_summary">
				<net.everythingandroid.smspopup.preferences.DialogCheckBoxPreference
					android:key="@string/pref_notif_enabled_key" android:title="@string/pref_notif_enabled_title"
					android:summaryOn="@string/pref_notif_enabled_summaryon"
					android:summaryOff="@string/pref_notif_enabled_summaryoff"
					android:defaultValue="false" />
				<RingtonePreference
				   android:key="@string/pref_notif_sound_key"
					android:title="@string/pref_notif_sound_title"
					android:summary="@string/pref_notif_sound_summary"
					android:ringtoneType="notification"
					android:showDefault="true"
					android:showSilent="true"
					android:dependency="@string/pref_notif_enabled_key"
					android:defaultValue="content://settings/system/notification_sound" />
				<CheckBoxPreference
				   android:key="@string/pref_vibrate_key"
					android:title="@string/pref_vibrate_title"
					android:summaryOn="@string/pref_vibrate_summaryon"
					android:summaryOff="@string/pref_vibrate_summaryoff"
					android:defaultValue="@string/pref_vibrate_default"
					android:dependency="@string/pref_notif_enabled_key" />
            <net.everythingandroid.smspopup.preferences.CustomVibrateListPreference
               android:key="@string/pref_vibrate_pattern_key"
               android:title="@string/pref_vibrate_pattern_title"
               android:summary="@string/pref_vibrate_pattern_summary"
               android:entries="@array/pref_vibrate_pattern_entries"
               android:entryValues="@array/pref_vibrate_pattern_values"
               android:defaultValue="@string/pref_vibrate_pattern_default"
               android:dependency="@string/pref_vibrate_key" />
				<CheckBoxPreference
				   android:key="@string/pref_flashled_key"
					android:title="@string/pref_flashled_title"
					android:summaryOn="@string/pref_flashled_summaryon"
					android:summaryOff="@string/pref_flashled_summaryoff"
					android:defaultValue="@string/pref_flashled_default"
					android:dependency="@string/pref_notif_enabled_key" />
				<ListPreference
				   android:key="@string/pref_flashled_color_key"
					android:title="@string/pref_flashled_color_title"
					android:summary="@string/pref_flashled_color_summary"
					android:entries="@array/pref_led_color_entries"
					android:entryValues="@array/pref_led_color_values"
					android:defaultValue="@string/pref_flashled_color_default"
					android:dependency="@string/pref_flashled_key" />
            <net.everythingandroid.smspopup.preferences.TestNotificationDialogPreference
               android:key="@string/pref_notif_test_key"
               android:dialogIcon="@drawable/android:ic_dialog_alert"
               android:title="@string/pref_notif_test_title"
               android:dialogTitle="@string/pref_notif_test_title"
               android:dialogMessage="@string/pref_notif_test_message"
               android:summary="@string/pref_notif_test_summary"
               android:dependency="@string/pref_notif_enabled_key"
               android:negativeButtonText="@null" />					
				<CheckBoxPreference android:key="@string/pref_notif_repeat_key"
					android:title="@string/pref_notif_repeat_title"
					android:summaryOn="@string/pref_notif_repeat_summaryon"
					android:summaryOff="@string/pref_notif_repeat_summaryoff"
					android:defaultValue="@string/pref_notif_repeat_default"
					android:dependency="@string/pref_notif_enabled_key" />
				<ListPreference android:key="@string/pref_notif_repeat_times_key"
					android:title="@string/pref_notif_repeat_times_title"
					android:summary="@string/pref_notif_repeat_times_summary"
					android:entries="@array/pref_notif_repeat_times_entries"
					android:entryValues="@array/pref_notif_repeat_times_values"
					android:defaultValue="@string/pref_notif_repeat_times_default"
					android:dependency="@string/pref_notif_repeat_key" />
            <ListPreference android:key="@string/pref_notif_repeat_interval_key"
               android:title="@string/pref_notif_repeat_interval_title"
               android:summary="@string/pref_notif_repeat_interval_summary"
               android:entries="@array/pref_notif_repeat_interval_entries"
               android:entryValues="@array/pref_notif_repeat_interval_entries"
               android:dialogTitle="@string/pref_notif_repeat_interval_dialogTitle"
               android:defaultValue="@string/pref_notif_repeat_interval_default"
               android:dependency="@string/pref_notif_repeat_key" />
			</PreferenceCategory>
		</PreferenceScreen>
	</PreferenceCategory>
	<PreferenceCategory android:title="@string/pref_other_title">
		<DialogPreference
		   android:key="@string/pref_about_key"
			android:dialogIcon="@drawable/smspopup_icon"
			android:title="@string/pref_about_title"
			android:dialogTitle="@string/app_name"
			android:summary="@string/pref_about_summary"
			android:negativeButtonText="@null" />
      <net.everythingandroid.smspopup.preferences.EmailDialogPreference
         android:key="@string/pref_sendemail_key"
         android:title="@string/pref_sendemail_title"
         android:summary="@string/pref_sendemail_summary"
         android:dialogIcon="@drawable/smspopup_icon"
         android:dialogTitle="@string/pref_sendemail_title"
         android:dialogMessage="@string/pref_sendemail_dialog"
         android:positiveButtonText="@string/pref_sendemail_buttonok"
         android:negativeButtonText="@string/pref_sendemail_buttoncancel" 
         />
	</PreferenceCategory>
</PreferenceScreen>