<?xml version="1.0" encoding="UTF-8"?>
<LinearLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:id="@+id/ButtonLinearLayout"
  android:layout_width="fill_parent"
  android:layout_height="wrap_content"
  android:gravity="center"
  android:padding="2sp" android:background="@android:color/darker_gray">
  <Button
    android:id="@+id/button1"
    android:layout_height="wrap_content"
    android:layout_weight="1"
    android:text="@string/button_close"
    android:layout_width="fill_parent" />
  <Button
    android:id="@+id/button2"
    android:layout_height="wrap_content"
    android:layout_weight="1"
    android:text="@string/button_delete"
    android:layout_width="fill_parent" />
  <Button
    android:id="@+id/button3"
    android:layout_height="wrap_content"
    android:layout_weight="1"
    android:text="@string/button_reply"
    android:layout_width="fill_parent" />
</LinearLayout>
