<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:ignore="UselessParent" >

    <LinearLayout
        android:id="@+id/popupMessageMainlayout"
        android:layout_width="@dimen/smspopup_pager_width"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal|bottom"
        android:background="@drawable/dialog_background"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="left" >

            <QuickContactBadge
                android:id="@+id/contactBadge"
                android:layout_width="@dimen/contact_thumbnail_size"
                android:layout_height="@dimen/contact_thumbnail_size"
                android:layout_gravity="center"
                android:layout_margin="@dimen/contact_thumbnail_margin"
                android:background="@drawable/quickcontact_badge_small"
                android:clickable="false"
                android:scaleType="fitCenter"
                android:src="@drawable/ic_contact_picture" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="4dp"
                android:orientation="vertical"
                android:paddingLeft="4dp" >

                <TextView
                    android:id="@+id/fromTextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:autoLink="phone"
                    android:ellipsize="end"
                    android:gravity="center_vertical"
                    android:maxLines="2"
                    android:paddingBottom="2dp"
                    android:text="Text Here"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:textColorLink="?android:attr/textColorPrimaryDisableOnly"
                    tools:ignore="HardcodedText" />

                <TextView
                    android:id="@+id/timestampTextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="2dp"
                    android:text="Timestamp here"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:textColor="?android:attr/textColorPrimaryDisableOnly"
                    tools:ignore="HardcodedText" />
            </LinearLayout>
        </LinearLayout>

        <include layout="@layout/popup_divider" />

        <ScrollView
            android:id="@+id/contentMessage"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:fillViewport="true"
            android:minHeight="85dp"
            android:paddingBottom="9dp"
            android:paddingTop="5dp" >

            <TextView
                android:id="@+id/messageTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autoLink="all"
                android:gravity="center"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:text="Text here"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="?android:attr/textColorPrimaryDisableOnly"
                android:textColorLink="?android:attr/textColorPrimaryDisableOnly"
                tools:ignore="HardcodedText" />
        </ScrollView>

        <LinearLayout
            android:id="@+id/contentMms"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center"
            android:visibility="gone"
            android:orientation="vertical"
            android:paddingBottom="12dp"
            android:paddingTop="12dp" >

            <TextView
                android:id="@+id/mmsSubjectTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:autoLink="all"
                android:gravity="center"
                android:paddingBottom="12dp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:text="Mms subject here"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="?android:attr/textColorPrimaryDisableOnly"
                android:textColorLink="?android:attr/textColorPrimaryDisableOnly"
                tools:ignore="HardcodedText" />

            <Button
                android:id="@+id/viewMmsButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:minWidth="140dp"
                android:text="@string/button_view_mms" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/contentPrivacy"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center"
            android:visibility="gone"
            android:paddingBottom="12dp"
            android:paddingTop="12dp" >

            <ImageButton
                android:id="@+id/viewButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/button_view"
                android:padding="8dp"
                android:src="@android:drawable/ic_menu_view" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/buttonPanel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:divider="?android:attr/dividerHorizontal"
            android:dividerPadding="0dip"
            android:orientation="vertical"
            android:showDividers="beginning" >

            <ViewSwitcher
                android:id="@+id/buttonViewSwitcher"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:inAnimation="@android:anim/fade_in"
                android:outAnimation="@android:anim/fade_out" >

                <LinearLayout
                    android:id="@+id/ButtonLayout"
                    style="@style/ButtonBar"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center" >

                    <Button
                        android:id="@+id/button1"
                        style="@style/ButtonBarButton"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/button_close" />

                    <Button
                        android:id="@+id/button2"
                        style="@style/ButtonBarButton"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/button_delete" />

                    <Button
                        android:id="@+id/button3"
                        style="@style/ButtonBarButton"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/button_reply" />
                </LinearLayout>

                <RelativeLayout
                    android:id="@+id/UnlockButtonLayout"
                    style="@style/ButtonBar"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content" >

                    <include layout="@layout/unlock_button" />
                </RelativeLayout>
            </ViewSwitcher>
        </LinearLayout>
    </LinearLayout>

</FrameLayout>